# msp430-projects

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MSP430FR2355/: README.md
MSP430FR2355/blink_led/: CMakeLists.txt  main.c
MSP430FR2355/docs/: .gitignore
MSP430G2553/: CMakeLists.txt  README.md
MSP430G2553/blink_led/: CMakeLists.txt  main.c
MSP430G2553/dht22_to_uart/: CMakeLists.txt  README.md  dht22.c  dht22.h  main.c
MSP430G2553/docs/: .gitignore
MSP430G2553/i2c_dht20/: CMakeLists.txt  driver_dht20.c  driver_dht20.h  main.c  uart.c  uart.h
MSP430G2553/out_of_box/: CMakeLists.txt  main.c
MSP430G2553/uart_bridge_converter/: CMakeLists.txt  README.md  main.c
